# pokefinder_rs

./: .gitignore  Cargo.toml  README.md
encounter_table_generator/: Cargo.toml
encounter_table_generator/src/: lib.rs  narc.rs
encounter_table_generator/src/gen3/: emerald.rs  encounters.json  encounters3.rs  frlg.rs  mod.rs  pack.rs  rs.rs  text.rs  xd.rs
encounter_table_generator/src/gen4/: characters.json  dp.rs  encounters.json  encounters4.rs  hgss.rs  location_modifier.json  mod.rs  pack.rs  pt.rs  text.rs
encounter_table_generator/src/gen5/: bw.rs  bw2.rs  encounters.json  encounters5.rs  location_modifier.json  mod.rs  pack.rs  text.rs
encounter_table_generator/src/gen8/: area_name.rs  bdsp.rs  encounters8.rs  field_encount_table.rs  location_modifier.json  map_info.rs  mod.rs  nests.rs  pack.rs  ug_encount.rs  ug_pokemon_data.rs  ug_rand_mark.rs  ug_special_pokemon.rs
pokefinder_rs_core/: Cargo.toml  build.rs
pokefinder_rs_core/src/: lib.rs
pokefinder_rs_core/src/enums/: buttons.rs  ds_type.rs  encounter.rs  game.rs  language.rs  lead.rs  method.rs  mod.rs  shadow_type.rs  shiny.rs
pokefinder_rs_core/src/gen3/: encounter_area3.rs  encounters3.rs  lock_info.rs  mod.rs  profile3.rs  shadow_template.rs
pokefinder_rs_core/src/gen4/: chained_sid_calc.rs  encounter_area4.rs  encounters4.rs  hgss_roamer.rs  mod.rs  profile4.rs  seed_time4.rs  seed_to_time_calculator4.rs  static_template4.rs
pokefinder_rs_core/src/gen5/: dream_radar_template.rs  encounter_area5.rs  encounters5.rs  hidden_grotto_area.rs  keypresses.rs  mod.rs  nazos.rs  pgf.rs  profile5.rs
pokefinder_rs_core/src/gen8/: den.rs  den_loader.rs  encounter_area8.rs  encounters8.rs  mod.rs  profile8.rs  raid.rs  underground_area.rs  wb8.rs
pokefinder_rs_core/src/parents/: daycare.rs  encounter_area.rs  mod.rs  personal_info.rs  personal_loader.rs  profile.rs  profile_loader.rs  shadow_lock.rs  slot.rs  static_template.rs
pokefinder_rs_core/src/resources/: encounter_data_3.rs  encounter_data_4.rs  encounter_data_8.rs  i18n.rs  mod.rs
pokefinder_rs_core/src/rng/: lcrng.rs  lcrng64.rs  lcrng_reverse.rs  mod.rs  mt.rs  mt_fast.rs  rng_list.rs  tiny_mt.rs  xoroshiro.rs  xorshift.rs
pokefinder_rs_core/src/util/: datetime.rs  encounter_slot.rs  iv_checker.rs  iv_to_pid_calculator.rs  mod.rs  nature.rs  translator.rs  utilities.rs
pokefinder_rs_core/tests/: main.rs
pokefinder_rs_core/tests/gen3/: egg3.json  gamecube.json  (+18 more)
pokefinder_rs_ui/: Cargo.toml  index.html
pokefinder_rs_ui/assets/: manifest.json  sw.js
pokefinder_rs_ui/src/: app.rs  lib.rs  main.rs
(+165 files in other folders)
