[package]
name = "encounter_table_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.1"
once_cell = "1.17.1"
serde = {version = "1.0.160", features = ['derive'] }
serde_json = "1.0.96"
reqwest = { version = "0.11.17", features = ['blocking', 'json'] }
bzip2 = "0.4.4"
no_std_io = {git = "https://github.com/zaksabeast/no_std_io.git", rev = "02800d8"}