[package]
name = "pokefinder_rs_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.11"
bitflags = {version = "2.0.0-rc.3", features = ['serde'] }
serde = {version = "1.0.154", features = ['derive'] }
serde_json = "1.0.94"
bzip2 = "0.4.4"
no_std_io = {git = "https://github.com/zaksabeast/no_std_io.git", rev = "67edbb4"}