[package]
name = "pokefinder_rs_core"
version = "0.1.0"
edition = "2021"

exclude = [
    "tests"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.6.1"
once_cell = "1.17.1"
bitflags = { version = "2.0.0-rc.3", features = ['serde'] }
serde = { version = "1.0.154", features = ['derive'] }
serde_json = "1.0.94"
bzip2-rs = "0.1.2"
no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "02800d8"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.61", features = ['Storage', 'Window'] }

[build-dependencies]
encounter_table_generator = { path = "../encounter_table_generator" }
