[package]
name = "pokefinder_rs_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
eframe = {version = "0.21.3", default-features = false, features = ['default_fonts', 'wgpu']}
pokefinder_rs_core = {path = "../pokefinder_rs_core"}
egui_extras = {version = "0.21.0", features = ['image'] }
image = {version = "0.24.6", features = ['png'] }
once_cell = "1.17.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"